tests/baselines/reference/instantiableTupleLabels1.errors.txt
instantiableTupleLabels1.ts(4,27): error TS5087: A labeled tuple element is declared as rest with a '...' before the name, rather than before the type.
instantiableTupleLabels1.ts(15,24): error TS2322: Type 'unknown' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
instantiableTupleLabels1.ts(18,46): error TS2322: Type 'T1' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
instantiableTupleLabels1.ts(18,71): error TS2322: Type 'T2' is not assignable to type 'string | number | bigint | boolean | null | undefined'.


==== instantiableTupleLabels1.ts (4 errors) ====
    type T1 = [`wow`: boolean];
    type T2 = [number, `wow`: boolean];
    type T3 = [number, ...`wow`: boolean[]];
    type T4 = [number, `wow`: ...boolean[]]; // error
                              ~~~~~~~~~~~~
!!! error TS5087: A labeled tuple element is declared as rest with a '...' before the name, rather than before the type.
    
    type Prefix = 'pre';
    
    type T5 = [`${Prefix}wow`: boolean];
    type T6 = [number, `${Prefix}wow`: boolean];
    type T7 = [number, ...`${Prefix}wow`: boolean[]];
    
    type T8 = [number, `${never}wontfly`: boolean]; // no label displayed
    type T9 = [number, `${any}wontfly`: boolean]; // no label displayed
    type T11 = [number, `${"a" | "b"}wontfly`: boolean]; // no label displayed
    type T12 = [number, `${unknown}wontfly`: boolean]; // error
                           ~~~~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
    
    type MakeTuple1<T1 extends string, T2 extends string> = [number, `second-${T1}`: string, ...`rest-${T2}`: boolean[]];
    type MakeTuple2<T1, T2> = [number, `second-${T1}`: string, ...`rest-${T2}`: boolean[]]; // error
                                                 ~~
!!! error TS2322: Type 'T1' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
!!! related TS2208 instantiableTupleLabels1.ts:18:17: This type parameter might need an `extends string | number | bigint | boolean | null | undefined` constraint.
                                                                          ~~
!!! error TS2322: Type 'T2' is not assignable to type 'string | number | bigint | boolean | null | undefined'.
!!! related TS2208 instantiableTupleLabels1.ts:18:21: This type parameter might need an `extends string | number | bigint | boolean | null | undefined` constraint.
    
    type T13 = MakeTuple1<"awesome", "tail">;
    type T14 = MakeTuple1<any, "tail">;
    type T15 = MakeTuple1<"a" | "b", "tail">;
    